fault-injection-detailes.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: details
spec:
  hosts:
  - details
  http:
  # - fault:
  #     abort:
  #       httpStatus: 555
  #       percentage:
  #         value: 100
  # - fault:
  #     delay:
  #       percentage:
  #         value: 70.0
  #       fixedDelay: 5s
  
  - route:
    - destination:
        host: details
        subset: v1
      weight: 100
  # - route:
  #   - destination:
  #       host: details
  #       subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: details
spec:
  host: details
  subsets:
  - name: v1
    labels:
      version: v1
