review-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
    - reviews
  http:
  - route:
    - destination:
        host: reviews
        subset: v1
      weight: 100
    mirror:
      host: reviews
      subset: v2
    mirrorPercentage:
      value: 20.0
    # - destination:
    #     host: reviews
    #     subset: v2
    #   weight: 20
    # - destination:
    #     host: reviews
    #     subset: v3
    #   weight: 30
